# deckspector

./: ARCHITECTURE.md  README.md  pyproject.toml
dt_manager/: __init__.py  bots.py  catalog.py  effects.py  models.py  rules.py  simulate.py
examples/: run_quickstart.py
tests/: test_smoke.py
