[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "dt-manager-starter"
version = "0.1.0"
description = "Starter simulator for the DT Manager custom tabletop card game"
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[tool.pytest.ini_options]
pythonpath = ["."]
